# k8s-redpanda-test

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  compose.yml  fastapi-example.yaml  producer-image.yml  pyproject.toml  redpanda-test.yaml  secrets.yaml  skaffold.yaml
.github/workflows/: consumer-image.yml  docker-image.yml  semantic-release.yml
consumer/: Dockerfile  pyproject.toml
consumer/src/consumer/: __main__.py  app.py
producer/: .pdm-python  Dockerfile  pyproject.toml
