[build-system]
requires = [ "setuptools>=60", "setuptools-scm>=8.0" ]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "_version.py"

[tool.pdm]
distribution = false
[project]
name = "k8s-fastapi"
description = "K8s FastAPI example deployment"
readme = "README.md"
requires-python = "==3.12.*"
dynamic = ["version"]

dependencies = [
    "fastapi~=0.111.0",
    "pydantic~=2.7.1",
    "uvicorn~=0.29.0",
]
authors = [
    {name = "Lauri Gates", email = "lauri.gates@forumvirium.fi"},
]
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "B", "Q"]
