[project]
name = "consumer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lauri Gates", email = "lauri.gates@forumvirium.fi"},
]
dependencies = [
    "confluent-kafka>=2.4.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
