[project]
name = "producer"
description = "Kafka producer test"
readme = "README.md"
requires-python = "==3.12.*"
dynamic = ["version"]

dependencies = [
    "fastapi~=0.111.0",
    "pydantic~=2.7.1",
    "uvicorn~=0.29.0",
    "confluent-kafka>=2.3.0,<2.4.0",
]
authors = [
    {name = "Lauri Gates", email = "lauri.gates@forumvirium.fi"},
]
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "B", "Q"]
